各htmlファイルのpathを書き換えた

--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About us</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="body.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css//header.css">
+  <link rel="stylesheet" href="../css/body.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
@@ -33,7 +33,7 @@
   
     <div class="popup-content" id="navi">
       <ul class="menu-list">
-        <li ><a href="mosha.html">MEMBERS</a></li>
+        <li ><a href="../index.html">MEMBERS</a></li>
         <li ><a href="">ABOUT</a></li>
         <li ><a href="">COMMUNITY</a></li>
         <li ><a href="">CONTACT</a></li>
@@ -57,7 +57,7 @@
         </ul>
         <p>@ Furniture Design</p>
       </footer>
-    <script src="/mosha.js"></script>
-    <script src="header.js"></script>  
+    <script src="../js/mosha.js"></script>
+    <script src="../js/header.js"></script>  
 </body>
 </html>
