--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moshamoshaC</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="body.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/body.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
 </head>
@@ -30,8 +30,8 @@
 
   <div class="popup-content" id="navi">
     <ul class="menu-list">
-      <li ><a href="mosha.html">MEMBERS</a></li>
-      <li ><a href="about.html">ABOUT</a></li>
+      <li ><a href="./index.html">MEMBERS</a></li>
+      <li ><a href="./about/index.html">ABOUT</a></li>
       <li ><a href="">COMMUNITY</a></li>
       <li ><a href="">CONTACT</a></li>
     </ul>
@@ -42,20 +42,20 @@
 
   <div id="introduction_box">
   </div>
-  <script src="body.js"></script>
   <!-- ももち遷移先 -->
   <!-- 00footer -->
-    <footer class="footer">
-      <ul class="footer__nav">
-        <li><a href="https://www.instagram.com/posse_programming
-          " target="_blank">INSTAGRAM</a></li>
+  <footer class="footer">
+    <ul class="footer__nav">
+      <li><a href="https://www.instagram.com/posse_programming
+        " target="_blank">INSTAGRAM</a></li>
         <li><a href="https://twitter.com/posse_program
           " target="_blank">TWITTER</a></li>
-        <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
-      </ul>
-      <p>@ Furniture Design</p>
-    </footer>
-  <script src="/mosha.js"></script>
-  <script src="header.js"></script>
+          <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
+        </ul>
+        <p>@ Furniture Design</p>
+      </footer>
+      <script src="./js/mosha.js"></script>
+      <script src="./js/header.js"></script>
+      <script src="./js/body.js"></script>
 </body>
 </html>
