--- a/about/index.html
+++ b/about/index.html
@@ -14,49 +14,48 @@
 <body>
 
 
-    <!-- けんとheader -->
-    <header class="header">
-      <div class="header-content">
-        <p class="header-letter">POSSE2</p>
-      </div>
-  
-      <div class="hamburger" id="hamburger">
-        <span class="inner_line" id="line1"></span>
-        <span class="inner_line" id="line2"></span>
-        <span class="inner_line" id="line3"></span>
-      </div>
-    </header>
-  
-    <div class="popup-cover" id="popupCover">
-      
+  <!-- けんとheader -->
+  <header class="header wapper">
+    <div class="header-content">
+      <h1 class="header-letter">POSSE2</h1>
     </div>
-  
+
+    <div class="hamburger" id="hamburger">
+      <span class="inner_line" id="line1"></span>
+      <span class="inner_line" id="line2"></span>
+      <span class="inner_line" id="line3"></span>
+    </div>
+  </header>
+
+  <main class="wrapper">
+    <!--ハンバーガーメニュー押下に関連するところ  -->
+    <div class="popup-cover" id="popupCover"></div>
     <div class="popup-content" id="navi">
       <ul class="menu-list">
         <li ><a href="../index.html">MEMBERS</a></li>
-        <li ><a href="">ABOUT</a></li>
+        <li ><a href="index.html">ABOUT</a></li>
         <li ><a href="">COMMUNITY</a></li>
         <li ><a href="">CONTACT</a></li>
       </ul>
     </div>
   
-    <h1 class="">About</h1>
-
+    <h2 class="page-title">About</h2>
+    
     <div>
       私たちはPOSSE2です。
     </div>
-  
+  </main>
     <!-- 00footer -->
-      <footer class="footer">
-        <ul class="footer__nav">
-          <li><a href="https://www.instagram.com/posse_programming
-            " target="_blank">INSTAGRAM</a></li>
-          <li><a href="https://twitter.com/posse_program
-            " target="_blank">TWITTER</a></li>
-          <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
-        </ul>
-        <p>@ Furniture Design</p>
-      </footer>
+    <footer class="footer wapper">
+      <ul class="footer__nav">
+        <li><a href="https://www.instagram.com/posse_programming
+                    " target="_blank">INSTAGRAM</a></li>
+        <li><a href="https://twitter.com/posse_program
+                      " target="_blank">TWITTER</a></li>
+        <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
+      </ul>
+      <p>@ Furniture Design</p>
+    </footer>
     <script src="../js/mosha.js"></script>
     <script src="../js/header.js"></script>  
 </body>
