--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="body">
+
   <!-- けんとheader -->
   <header class="header wapper">
     <div class="header-content">
-      <p class="header-letter">POSSE2</p>
+      <h1 class="header-letter">POSSE2</h1>
     </div>
 
     <div class="hamburger" id="hamburger">
@@ -26,36 +27,38 @@
     </div>
   </header>
 
-  <div class="popup-cover" id="popupCover"></div>
-
-  <div class="popup-content" id="navi">
-    <ul class="menu-list">
-      <li ><a href="./index.html">MEMBERS</a></li>
-      <li ><a href="./about/index.html">ABOUT</a></li>
-      <li ><a href="">COMMUNITY</a></li>
-      <li ><a href="">CONTACT</a></li>
-    </ul>
-  </div>
-
-
+  <main class="wrapper">
+    <!--ハンバーガーメニュー押下に関連するところ  -->
+    <div class="popup-cover" id="popupCover"></div>
+    <div class="popup-content" id="navi">
+      <ul class="menu-list">
+        <li ><a href="./index.html">MEMBERS</a></li>
+        <li ><a href="./about/index.html">ABOUT</a></li>
+        <li ><a href="">COMMUNITY</a></li>
+        <li ><a href="">CONTACT</a></li>
+      </ul>
+    </div>
+    
   <!-- つよちゃんbody gannba-->
+  <h2 class="page-title">Members</h2>
 
   <div id="introduction_box">
   </div>
-  <!-- ももち遷移先 -->
+</main>
   <!-- 00footer -->
-  <footer class="footer">
+  <footer class="footer wapper">
     <ul class="footer__nav">
       <li><a href="https://www.instagram.com/posse_programming
-        " target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/posse_program
-          " target="_blank">TWITTER</a></li>
-          <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
-        </ul>
-        <p>@ Furniture Design</p>
-      </footer>
+          " target="_blank">INSTAGRAM</a></li>
+      <li><a href="https://twitter.com/posse_program
+            " target="_blank">TWITTER</a></li>
+      <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
+    </ul>
+    <p>@ Furniture Design</p>
+  </footer>
       <script src="./js/mosha.js"></script>
       <script src="./js/header.js"></script>
       <script src="./js/body.js"></script>
-</body>
-</html>
+    </body>
+    </html>
+    
