最小構成単位完成

--- a/index.html
+++ b/index.html
@@ -40,10 +40,17 @@
     </div>
     
   <!-- つよちゃんbody gannba-->
-  <h2 class="page-title">Members</h2>
-
-  <div id="introduction_box">
+<div class="picture-box">
+  <div class="posse-allstars">
+    <a href="transition/index.html?id=1">
+      <img class="members" src="./picture/members1.jpg">
+    </a>
   </div>
+  <li class="introduction">
+    <p>ホニャホニャ</p>
+    <p>人人</p>
+  </li>
+</div>
 </main>
   <!-- 00footer -->
   <footer class="footer wapper">
