--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
     </div>
     
   <!-- つよちゃんbody gannba-->
-<div class="picture-box">
-  <div class="posse-allstars">
+<div class="introduction-cards" id="introduction_box">
+  <!-- <div class="posse-allstars">
     <a href="transition/index.html?id=1">
       <img class="members" src="./picture/members1.jpg">
     </a>
   </div>
-  <li class="introduction">
-    <p>ホニャホニャ</p>
-    <p>人人</p>
-  </li>
+    <ul class="introduction">
+      <li>ホニャホニャ</li>
+      <li>人人</li>
+    </ul> -->
 </div>
 </main>
   <!-- 00footer -->
