--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <ul class="menu-list">
         <li ><a href="./index.html">MEMBERS</a></li>
         <li ><a href="./about/index.html">ABOUT</a></li>
-        <li ><a href="">COMMUNITY</a></li>
-        <li ><a href="">CONTACT</a></li>
+        <li ><a href="./community/index.html">COMMUNITY</a></li>
+        <li ><a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a></li>
       </ul>
     </div>
     
