--- a/transition/index.html
+++ b/transition/index.html
@@ -8,26 +8,8 @@
     <link rel="stylesheet" href="../css/transition.css">
 </head>
 <body>
-<div>
-    <span class="product_tittle">プロダクトタイトル</span>
-    <div class="product_wrapper">
-    <div class="product_img_wrapper">
-        <img src="https://code-step.com/demo/html/store2/img/item1.jpg" alt="" class="product_img"></div>
-    <div>
-        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト </p>
-        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-        <p>¥99,999 +tax</p>
-        <span>
-            <p>SIZE：
-                W999 × D999 × H999</p>
-            <p>COLOR：
-                テキスト</p>
-            <p>MATERIAL：
-                テキストテキストテキスト</p>
-        </span>
-        <span></span>
-    </div>
-</div>
-</div>
+    <div id="information"></div>
+<script src="../js/transition.js"></script>
 </body>
+
 </html>
