--- a/index.html
+++ b/index.html
@@ -1,71 +1,85 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>moshamoshaC</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/body.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/body.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="body">
+    <!-- けんとheader -->
+    <header class="header wapper">
+      <div class="header-content">
+        <h1 class="header-letter">POSSE2</h1>
+      </div>
 
-</head>
-<body class="body">
+      <div class="hamburger" id="hamburger">
+        <span class="inner_line" id="line1"></span>
+        <span class="inner_line" id="line2"></span>
+        <span class="inner_line" id="line3"></span>
+      </div>
+    </header>
 
-  <!-- けんとheader -->
-  <header class="header wapper">
-    <div class="header-content">
-      <h1 class="header-letter">POSSE2</h1>
-    </div>
+    <main class="wrapper">
+      <!--ハンバーガーメニュー押下に関連するところ  -->
+      <div class="popup-cover" id="popupCover"></div>
+      <div class="popup-content" id="navi">
+        <ul class="menu-list">
+          <li><a href="./index.html">MEMBERS</a></li>
+          <li><a href="./about/index.html">ABOUT</a></li>
+          <li><a href="./community/index.html">COMMUNITY</a></li>
+          <li>
+            <a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a>
+          </li>
+        </ul>
+      </div>
 
-    <div class="hamburger" id="hamburger">
-      <span class="inner_line" id="line1"></span>
-      <span class="inner_line" id="line2"></span>
-      <span class="inner_line" id="line3"></span>
-    </div>
-  </header>
-
-  <main class="wrapper">
-    <!--ハンバーガーメニュー押下に関連するところ  -->
-    <div class="popup-cover" id="popupCover"></div>
-    <div class="popup-content" id="navi">
-      <ul class="menu-list">
-        <li ><a href="./index.html">MEMBERS</a></li>
-        <li ><a href="./about/index.html">ABOUT</a></li>
-        <li ><a href="./community/index.html">COMMUNITY</a></li>
-        <li ><a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a></li>
+      <!-- つよちゃんbody gannba-->
+      <div class="introduction-cards" id="introduction_box">
+      </div>
+      <div class="more">
+        <button class="view-more-button" id="ViewMoreButton" onclick="viewmore()">もっとみる</button>
+      </div>
+    </main>
+    <!-- 00footer -->
+    <footer class="footer wapper">
+      <ul class="footer__nav">
+        <li>
+          <a
+            href="https://www.instagram.com/posse_programming
+          "
+            target="_blank"
+            >INSTAGRAM</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/posse_program
+            "
+            target="_blank"
+            >TWITTER</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/HarborS-110032910423433"
+            target="_blank"
+            >FACEBOOK</a
+          >
+        </li>
       </ul>
-    </div>
-    
-  <!-- つよちゃんbody gannba-->
-<div class="introduction-cards" id="introduction_box">
-  <!-- <div class="posse-allstars">
-    <a href="transition/index.html?id=1">
-      <img class="members" src="./picture/members1.jpg">
-    </a>
-  </div>
-    <ul class="introduction">
-      <li>ホニャホニャ</li>
-      <li>人人</li>
-    </ul> -->
-</div>
-</main>
-  <!-- 00footer -->
-  <footer class="footer wapper">
-    <ul class="footer__nav">
-      <li><a href="https://www.instagram.com/posse_programming
-          " target="_blank">INSTAGRAM</a></li>
-      <li><a href="https://twitter.com/posse_program
-            " target="_blank">TWITTER</a></li>
-      <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
-    </ul>
-    <p>@ Furniture Design</p>
-  </footer>
-      <script src="./js/mosha.js"></script>
-      <script src="./js/header.js"></script>
-      <script src="./js/body.js"></script>
-    </body>
-    </html>
-    
+      <p>@ Furniture Design</p>
+    </footer>
+    <script src="./js/mosha.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/body.js"></script>
+  </body>
+</html>
