連想配列を使った紹介文完成配列を使った紹介文完成

--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
   <link rel="stylesheet" href="./css/body.css" />
   <link rel="stylesheet" href="./css/footer.css" />
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Murecho&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Murecho&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Murecho&family=Supermercado+One&family=Zen+Kurenaido&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/loading.css">
 </head>
 
-<body class="body">
+<body>
+  <div class="loading" id="loading">
+    <div class="loading-text">
+      <span class="loading-text-words">P</span>
+      <span class="loading-text-words">O</span>
+      <span class="loading-text-words">S</span>
+      <span class="loading-text-words">S</span>
+      <span class="loading-text-words">E</span>
+      <span class="loading-text-words">2</span>
+  
+    </div>
+  </div>
   <!-- けんとheader -->
   <header class="header wapper">
     <div class="header-content">
@@ -65,29 +84,6 @@
     </ul>
     </div>
 
-    <!-- つよちゃんbody gannba-->
-    <!-- <div class="picture-box">
-      <div class="posse-allstars">
-        <a href="transition/index.html?id=3">
-          <img class="members" src="./picture/members1.jpg">
-        </a>
-      </div>
-      <li class="introduction">
-        <p>ホニャホニャ</p>
-        <p>人人</p>
-      </li>
-    </div>
-    </main> -->
-    <!-- 00footer -->
-    <!-- <footer class="footer wapper">
-      <ul class="footer__nav">
-        <li><a href="https://www.instagram.com/posse_programming
-          " target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/posse_program
-            " target="_blank">TWITTER</a></li>
-        <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
-      </ul>
-      <p>@ Furniture Design</p> -->
   </footer>
   <script src="./js/mosha.js"></script>
   <script src="./js/header.js"></script>
