--- a/transition/index.html
+++ b/transition/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/transition.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Murecho&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Murecho&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Murecho&family=Supermercado+One&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="information"></div>
