--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <span class="loading-text-words">S</span>
       <span class="loading-text-words">E</span>
       <span class="loading-text-words">2</span>
-  
+
     </div>
   </div>
   <!-- けんとheader -->
@@ -85,6 +85,11 @@
     </div>
 
   </footer>
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"
+  ></script>
   <script src="./js/mosha.js"></script>
   <script src="./js/header.js"></script>
   <script src="./js/body.js"></script>
