リスポンシブ対応完成

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 <body class="body">
 
   <!-- けんとheader -->
-  <header class="header wapper">
-    <div class="header-content">
-      <h1 class="header-letter">POSSE2</h1>
-    </div>
-
-    <div class="hamburger" id="hamburger">
-      <span class="inner_line" id="line1"></span>
-      <span class="inner_line" id="line2"></span>
-      <span class="inner_line" id="line3"></span>
+  <header class="header wrapper">
+    <div class="header container">
+      <div class="header-content">
+        <h1 class="header-letter">POSSE2</h1>
+      </div>
+  
+      <div class="hamburger" id="hamburger">
+        <span class="inner_line" id="line1"></span>
+        <span class="inner_line" id="line2"></span>
+        <span class="inner_line" id="line3"></span>
+      </div>
     </div>
   </header>
 
@@ -40,7 +42,7 @@
     </div>
     
   <!-- つよちゃんbody gannba-->
-<div class="introduction-cards" id="introduction_box">
+  <div class="introduction-cards" id="introduction_box">
   <!-- <div class="posse-allstars">
     <a href="transition/index.html?id=1">
       <img class="members" src="./picture/members1.jpg">
