--- a/index.html
+++ b/index.html
@@ -34,15 +34,21 @@
     </div>
   </div>
   <!-- けんとheader -->
-  <header class="header wapper">
-    <div class="header-content">
-      <h1 class="header-letter">POSSE2</h1>
-    </div>
-
-    <div class="hamburger" id="hamburger">
-      <span class="inner_line" id="line1"></span>
-      <span class="inner_line" id="line2"></span>
-      <span class="inner_line" id="line3"></span>
+  <header class="header wrapper">
+    <div class="header-inner">
+      <div class="header-content">
+        <div class="header-logo">
+          <img
+          src="https://posse.anti-pattern.co.jp/img/posseLogo.png" alt="POSSEのロゴ">
+        </div>
+      </div>
+      <div class="hamburger-wrapper">
+        <div class="hamburger" id="hamburger">
+          <span class="inner_line" id="line1"></span>
+          <span class="inner_line" id="line2"></span>
+          <span class="inner_line" id="line3"></span>
+        </div>
+      </div>
     </div>
   </header>
 
