--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     href="https://fonts.googleapis.com/css2?family=Murecho&family=Supermercado+One&family=Zen+Kurenaido&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/loading.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -64,7 +66,14 @@
     <div class="introduction-cards" id="introduction_box">
     </div>
     <div class="more">
-      <button class="view-more-button" id="ViewMoreButton" onclick="viewmore()">もっとみる</button>
+      <div>
+        <div class="view-more-button" id="ViewMoreButton" onclick="viewmore()">
+          <svg class="angles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M169.4 278.6C175.6 284.9 183.8 288 192 288s16.38-3.125 22.62-9.375l160-160c12.5-12.5 12.5-32.75 0-45.25s-32.75-12.5-45.25 0L192 210.8L54.63 73.38c-12.5-12.5-32.75-12.5-45.25 0s-12.5 32.75 0 45.25L169.4 278.6zM329.4 265.4L192 402.8L54.63 265.4c-12.5-12.5-32.75-12.5-45.25 0s-12.5 32.75 0 45.25l160 160C175.6 476.9 183.8 480 192 480s16.38-3.125 22.62-9.375l160-160c12.5-12.5 12.5-32.75 0-45.25S341.9 252.9 329.4 265.4z"/></svg>
+          <p class="view-more-JPN">
+            もっとみる
+          </p>
+        </div>
+      </div>
     </div>
   </main>
   <!-- 00footer -->
