もっと見るボタンを押した状態で表示されたカードの遷移先からトップページに戻ったときに元の状態が保持されたままにしました#38

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="introduction-cards" id="introduction_box">
     </div>
     <div class="more">
-      <button class="view-more-button" id="ViewMoreButton" onclick="viewmore()">もっとみる</button>
+      <button class="view-more-button" id="ViewMoreButton">もっとみる</button>
     </div>
   </main>
   <!-- 00footer -->
