@POSSEにフッターを変えた

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </li>
     </ul>
     </div>
-
+    <p>@POSSE</p>
   </footer>
   <script
     src="https://code.jquery.com/jquery-3.6.0.js"
