--- a/community/index.html
+++ b/community/index.html
@@ -38,7 +38,7 @@
         <li ><a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a></li>
       </ul>
     </div>
-  
+
     <h2 class="page-title">Community</h2>
 
     <div  >
@@ -68,7 +68,7 @@
 
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202.59359075858026!2d139.71519223701566!3d35.66475141289963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b8a9122f1cd%3A0xcfe4aad9a0735cb8!2z44OP44O844OQ44O844K66KGo5Y-C6YGT!5e0!3m2!1sja!2sjp!4v1643807286074!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    
+
   </main>
     <!-- 00footer -->
     <footer class="footer wapper">
@@ -79,9 +79,9 @@
                       " target="_blank">TWITTER</a></li>
         <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
       </ul>
-      <p>@ Furniture Design</p>
+      <p>@POSSE</p>
     </footer>
     <script src="../js/mosha.js"></script>
-    <script src="../js/header.js"></script>  
+    <script src="../js/header.js"></script>
 </body>
 </html>
