メニュー開いたときもヘッダーが出るようにすることで、×が消えるバグを修正しました

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <!-- けんとheader -->
-  <header class="header wrapper">
+  <header class="header header-burger-ver wrapper" id="header">
     <div class="header-inner">
       <div class="header-content">
         <div class="header-logo">
