--- a/about/index.html
+++ b/about/index.html
@@ -15,15 +15,24 @@
 
 
   <!-- けんとheader -->
-  <header class="header wapper">
-    <div class="header-content">
-      <h1 class="header-letter">POSSE2</h1>
-    </div>
-
-    <div class="hamburger" id="hamburger">
-      <span class="inner_line" id="line1"></span>
-      <span class="inner_line" id="line2"></span>
-      <span class="inner_line" id="line3"></span>
+  <header class="header header-burger-ver wrapper" id="header">
+    <div class="header-inner">
+      <div class="header-content">
+        <div class="header-logo">
+          <img
+          src="../picture/posse2ロゴ.png" alt="POSSEのロゴ">
+        </div>
+      </div>
+      <!-- <div>
+        <p>navigation</p>
+      </div> -->
+      <div class="hamburger-wrapper">
+        <div class="hamburger" id="hamburger">
+          <span class="inner_line" id="line1"></span>
+          <span class="inner_line" id="line2"></span>
+          <span class="inner_line" id="line3"></span>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -38,7 +47,7 @@
         <li ><a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a></li>
       </ul>
     </div>
-  
+    
     <h2 class="page-title">About</h2>
     
     <div>
