--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           src="./picture/posse2ロゴ.png" alt="POSSEのロゴ">
         </div>
       </div>
+      <!-- <div>
+        <p>navigation</p>
+      </div> -->
       <div class="hamburger-wrapper">
         <div class="hamburger" id="hamburger">
           <span class="inner_line" id="line1"></span>
@@ -52,7 +55,7 @@
     </div>
   </header>
 
-  <main class="wrapper main-inner">
+  <main class="wrapper">
     <!--ハンバーガーメニュー押下に関連するところ  -->
     <div class="popup-cover" id="popupCover"></div>
     <div class="popup-content" id="navi">
@@ -65,8 +68,9 @@
         </li>
       </ul>
     </div>
-
+    
     <!-- つよちゃんbody gannba-->
+    <h2 class="page-title">MEMBERS</h2>
     <div class="introduction-cards" id="introduction_box">
     </div>
     <div class="more">
