footerのデザイン

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Murecho&family=Supermercado+One&family=Zen+Kurenaido&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/loading.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -84,22 +84,29 @@
     </div>
   </main>
   <!-- 00footer -->
-  <footer class="footer wapper">
+  <footer class="footer">
     <ul class="footer__nav">
-      <li>
+      <li class="footer-instagram">
+        <img src="picture/iconmonstr-instagram-11.svg" alt="">
         <a href="https://www.instagram.com/posse_programming
           " target="_blank">INSTAGRAM</a>
       </li>
-      <li>
+      <li class="footer-twitter">
+        <img src="picture/iconmonstr-twitter-1.svg" alt="">
         <a href="https://twitter.com/posse_program
             " target="_blank">TWITTER</a>
       </li>
-      <li>
+      <li class="footer-facebook">
+        <img src="picture/iconmonstr-facebook-6.svg" alt="">
         <a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a>
       </li>
     </ul>
+    <div class="footer-posse box">
+      <p class="title">@POSSE</p>
+      <div class='wave -one'></div>
+      <div class='wave -two'></div>
+      <div class='wave -three'></div>
     </div>
-    <p>@POSSE</p>
   </footer>
   <script
     src="https://code.jquery.com/jquery-3.6.0.js"
