--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     <div class="header-inner">
       <div class="header-content">
         <div class="header-logo">
-          <img
-          src="./picture/posse2ロゴ.png" alt="POSSEのロゴ">
+          <a href="./index.html">
+            <img src="./picture/posse2ロゴ.png" alt="POSSEのロゴ">
+          </a>
         </div>
       </div>
       <!-- <div>
