--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,10 @@
     <div class="header-inner">
       <div class="header-content">
         <div class="header-logo">
-          <img
-          src="../picture/posse2ロゴ.png" alt="POSSEのロゴ">
+          <a href="../index.html">
+            <img
+            src="../picture/posse2ロゴ.png" alt="POSSEのロゴ">
+          </a>
         </div>
       </div>
       <!-- <div>
