#51の方完了。page-titleまわりの余白をいい感じにしました。

--- a/about/index.html
+++ b/about/index.html
@@ -49,19 +49,19 @@
         <li ><a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a></li>
       </ul>
     </div>
-
-    <h2 class="page-title">About</h2>
-
-    <div>
-      私たちはPOSSE2です。
+    <div class="main-inner">
+      <h2 class="page-title">About</h2>
+      <div class="about-contents">
+        <p>私たちはPOSSE2です。</p>
+      </div>
     </div>
-  </main>
+    </main>
     <!-- 00footer -->
     <footer class="footer wapper">
       <ul class="footer__nav">
         <li><a href="https://www.instagram.com/posse_programming
-                    " target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/posse_program
+          " target="_blank">INSTAGRAM</a></li>
+          <li><a href="https://twitter.com/posse_program
                       " target="_blank">TWITTER</a></li>
         <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
       </ul>
