--- a/community/index.html
+++ b/community/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css//header.css">
   <link rel="stylesheet" href="../css/body.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -80,15 +80,29 @@
 
   </main>
     <!-- 00footer -->
-    <footer class="footer wapper">
+    <footer class="footer">
       <ul class="footer__nav">
-        <li><a href="https://www.instagram.com/posse_programming
-                    " target="_blank">INSTAGRAM</a></li>
-        <li><a href="https://twitter.com/posse_program
-                      " target="_blank">TWITTER</a></li>
-        <li><a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a></li>
+        <li class="footer-instagram">
+          <img src="../picture/iconmonstr-instagram-11.svg" alt="">
+          <a href="https://www.instagram.com/posse_programming
+            " target="_blank">INSTAGRAM</a>
+        </li>
+        <li class="footer-twitter">
+          <img src="../picture/iconmonstr-twitter-1.svg" alt="">
+          <a href="https://twitter.com/posse_program
+              " target="_blank">TWITTER</a>
+        </li>
+        <li class="footer-facebook">
+          <img src="../picture/iconmonstr-facebook-6.svg" alt="">
+          <a href="https://www.facebook.com/HarborS-110032910423433" target="_blank">FACEBOOK</a>
+        </li>
       </ul>
-      <p>@POSSE</p>
+      <div class="footer-posse box">
+        <p class="title">@POSSE</p>
+        <div class='wave -one'></div>
+        <div class='wave -two'></div>
+        <div class='wave -three'></div>
+      </div>
     </footer>
     <script src="../js/mosha.js"></script>
     <script src="../js/header.js"></script>
