ヘッダーとメニューのレスポンシブ対応と、ホバー先生

--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
           </a>
         </div>
       </div>
-      <!-- <div>
-        <p>navigation</p>
-      </div> -->
+
+      <nav class="nav-pc">
+        <ul class="nav-pc-list">
+          <li><a href="./index.html">MEMBERS</a></li>
+          <li><a href="./about/index.html">ABOUT</a></li>
+          <li><a href="./community/index.html">COMMUNITY</a></li>
+        </ul>
+      </nav>
+      
       <div class="hamburger-wrapper">
         <div class="hamburger" id="hamburger">
           <span class="inner_line" id="line1"></span>
