--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body id="body">
 
 
   <!-- けんとheader -->
@@ -112,5 +112,9 @@
     </footer>
     <script src="../js/mosha.js"></script>
     <script src="../js/header.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 </body>
 </html>
