--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="body">
   <div class="loading" id="loading">
     <div class="loading-text">
       <span class="loading-text-words">P</span>
