--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           <li><a href="./index.html">MEMBERS</a></li>
           <li><a href="./about/index.html">ABOUT</a></li>
           <li><a href="./community/index.html">COMMUNITY</a></li>
+          <li>
+            <a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a>
+          </li>
         </ul>
       </nav>
       
