--- a/about/index.html
+++ b/about/index.html
@@ -25,9 +25,16 @@
           </a>
         </div>
       </div>
-      <!-- <div>
-        <p>navigation</p>
-      </div> -->
+      <nav class="nav-pc">
+        <ul class="nav-pc-list">
+          <li><a href="../index.html">MEMBERS</a></li>
+          <li><a href="./about/index.html">ABOUT</a></li>
+          <li><a href="../community/index.html">COMMUNITY</a></li>
+          <li>
+            <a href="https://line.me/R/ti/p/@651htnqp?from=page">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
       <div class="hamburger-wrapper">
         <div class="hamburger" id="hamburger">
           <span class="inner_line" id="line1"></span>
